@@ -1,6 +1,5 @@
 -Xms4g -Xmx8g
 -XX:+UseZGC
--XX:+UseCompactObjectHeaders
 -XX:+UseStringDeduplication
 -XX:MetaspaceSize=256m
 -XX:MaxMetaspaceSize=512m
